dark mode fixed2

--- a/src/index.css
+++ b/src/index.css
@@ -87,4 +87,7 @@ button.primary:hover,
 
 .dark {
   filter: brightness(0.8);
+  margin: 0;
+  padding: 0;
+  height: 100vh;
 }
